--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <h1> Welcome to side hustle internship</h1>
+    <h1> Welcome to side hustle internship.</h1>
 
     <h2>course: Introduction To Web Development</h2>
 
@@ -30,6 +30,7 @@
 
     <p>Email: coolbuhzor@gmail.com</p>
 
-    <p>slack id: code-wolf</p>
+    <p>Slack id: code-wolf</p>
+
 </body>
 </html>
